--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -63,3 +63,28 @@ main {
 .compony{
   color: #f9f6f2;
 }
+
+/*  sidebar */ 
+
+.navbar-brand {
+  font-weight: bold;
+}
+
+.side-navbar {
+  width:240px;
+  height:100%;
+  position:absolute;
+  left: -300px;
+  background-color: #100901;
+  transition: 0.5s;
+}
+
+.site-container {
+  transition: 0.4s;
+}
+.active-cont {
+  margin-left:240px;
+}
+.active-nav {
+  left:0;
+}
